
This is a list of noteworthy changes across releases.
For more details and developer visible changes see the ChangeLog file.
For a list of compatibility related changes see the UPGRADE.asciidoc file.

Version 4.0.4 released on 2013-MM-DD
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New Features
+++++++++++

* 

Enhancements
++++++++++++

* Added new regexp operator for strings in authentication rules

Bug Fixes
+++++++++

* External authentication sources of portal profiles are not respected

Version 4.0.3 released on 2013-07-22
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New Features
+++++++++++

* Support for 'hostapd' access points

Enhancements
++++++++++++

* New buttons to clone a switch, a floating device, and a violation
* New version number in the top navigation bar

Bug Fixes
+++++++++

* Form toggle fields don't support all variations
* Counters and graphs for today are empty
* Maintenance interval is not respected in pfmon
* Optgroup labels in select menus are hidden when build multiple times
* Callbacks are performed on every ReadConfig
* Guest modes don't show up on captive portal
* Authentication source is not respected when matching actions in register.cgi

Version 4.0.2 released on 2013-07-12
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Enhancements
++++++++++++

* Replaced bind with pfdns - PacketFence's own DNS server
* Rewrote Oauth2 support (based on ipset sessions)
* New counters bellow line graphs of reports
* Support for anonymous bind in LDAP authentication sources
* Added support for date and time conditions in authentication sources
* Added "is not" condition on connection type
* Extend simple search of nodes to match MAC, owner and computer name
* Added search and display of the a user's telephone number
* Can now have multiple external authentication sources
* Increased speed of loading configuration from the cache
* Each portal profile can now use a list of authentication sources
* A switch definition can now be easily cloned