@@ -18,6 +18,7 @@ use strict;
 use warnings;
 
 use List::Util qw(first);
+use pf::config qw($TRUE $FALSE);
 use pf::log;
 
 =head1 METHODS
@@ -167,6 +168,28 @@ sub getSourceByType {
     }
 
     return $result;
+}
+
+=item guestRegistrationOnly
+
+Returns true if the profile only uses "sign-in" authentication sources (SMS, email or sponsor).
+
+=cut
+
+sub guestRegistrationOnly {
+    my ($self) = @_;
+
+    my %registration_types =
+      (
+       pf::Authentication::Source::EmailSource->meta->get_attribute('type')->default => undef,
+       pf::Authentication::Source::SMSSource->meta->get_attribute('type')->default => undef,
+       pf::Authentication::Source::SponsorEmailSource->meta->get_attribute('type')->default => undef,
+      );
+
+    my $result = first { !exists $registration_types{$_} }
+      map { pf::authentication::getAuthenticationSource($_)->{'type'} } @{$self->getSources()};
+
+    return ($result? $FALSE : $TRUE);
 }
 
 =back
